--- a/dashboard.html
+++ b/dashboard.html
@@ -123,7 +123,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-lg-8">
-                                    <table class="table">
+                                    <table class="table table-striped table-bordered table-hover">
                                         <thead>
                                             <tr>
                                                 <th scope="col">#</th>
