--- a/forgot-password.html
+++ b/forgot-password.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Ela Admin - HTML5 Admin Template</title>
+    <title>SMS GURU - Reset Password</title>
     <meta name="description" content="Ela Admin - HTML5 Admin Template">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -28,18 +28,18 @@
 <body class="bg-dark">
 
     <div class="sufee-login d-flex align-content-center flex-wrap">
-        <div class="container">
+        <div class="container" style="padding-top: 5%;">
             <div class="login-content">
                 <div class="login-logo">
                     <a href="index.html">
-                        <img class="align-content" src="images/logo.png" alt="">
-                    </a>
+                        <h1 style="color:#fff"> PASSWORD RESET</h1>
+                     </a>
                 </div>
                 <div class="login-form">
-                    <form>
+                    <form action="/sms/backend/dashboard.html">
                         <div class="form-group">
                             <label>Email address</label>
-                            <input type="email" class="form-control" placeholder="Email">
+                            <input type="email" class="form-control" placeholder="Email" required>
                         </div>
                         <button type="submit" class="btn btn-primary btn-flat m-b-15">Submit</button>
                     </form>
