--- a/register.html
+++ b/register.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Ela Admin - HTML5 Admin Template</title>
+    <title>SMS GURU - Register</title>
     <meta name="description" content="Ela Admin - HTML5 Admin Template">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -29,26 +29,26 @@
 <body class="bg-dark">
 
     <div class="sufee-login d-flex align-content-center flex-wrap">
-        <div class="container">
+        <div class="container" style="padding-top: 5%;">
             <div class="login-content">
                 <div class="login-logo">
                     <a href="index.html">
-                        <img class="align-content" src="images/logo.png" alt="">
-                    </a>
-                </div>
+                        <h1 style="color:#fff"> REGISTER</h1>
+                     </a>
+                 </div>
                 <div class="login-form">
-                    <form>
+                    <form action="dashboard.html">
                         <div class="form-group">
-                            <label>User Name</label>
-                            <input type="email" class="form-control" placeholder="User Name">
+                            <label>Username</label>
+                            <input type="text" class="form-control" placeholder="User Name" required>
                         </div>
                         <div class="form-group">
                             <label>Email address</label>
-                            <input type="email" class="form-control" placeholder="Email">
+                            <input type="email" class="form-control" placeholder="Email" required>
                         </div>
                         <div class="form-group">
                             <label>Password</label>
-                            <input type="password" class="form-control" placeholder="Password">
+                            <input type="password" class="form-control" placeholder="Password" required>
                         </div>
                         <div class="checkbox">
                             <label>
@@ -56,14 +56,14 @@
                             </label>
                         </div>
                         <button type="submit" class="btn btn-primary btn-flat m-b-30 m-t-30">Register</button>
-                        <div class="social-login-content">
+                        <!-- <div class="social-login-content">
                             <div class="social-button">
                                 <button type="button" class="btn social facebook btn-flat btn-addon mb-3"><i class="ti-facebook"></i>Register with facebook</button>
                                 <button type="button" class="btn social twitter btn-flat btn-addon mt-2"><i class="ti-twitter"></i>Register with twitter</button>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="register-link m-t-15 text-center">
-                            <p>Already have account ? <a href="login.html"> Sign in</a></p>
+                            <p>Already have account ? <a style="color:blue" href="login.html"> Sign in</a></p>
                         </div>
                     </form>
                 </div>
