--- a/reports.html
+++ b/reports.html
@@ -109,7 +109,7 @@
                         <div class="card">
                             <div class="card-header"><strong>Reports</strong><small> Transactions</small></div>
                             <div class="card-body">
-                                <table class="table">
+                                <table class="table table-striped table-bordered table-hover">
                                     <thead>
                                         <tr>
                                             <th scope="col">#</th>
