--- a/view-groups.html
+++ b/view-groups.html
@@ -71,7 +71,7 @@
                         <div class="card">
                             <div class="card-header"><strong>Group List</strong><small> View Groups</small></div>
                             <div class="card-body">
-                                <table class="table">
+                                <table class="table table-striped table-bordered table-hover">
                                     <thead>
                                         <tr>
                                           <th scope="col">#</th>
